--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     </header>
     <form>
         <input type="text" class="todo-input" placeholder="Add task here">
-        <button type="submit" class="todo-button">Add</button>
+        <button type="submit" class="todo-button">To do</button>
+        <div class="select">
+            <select name="todos" class="filter-todo">
+                <option value="all">All</option>
+                <option value="completed">Completed</option>
+                <option value="incomplete">Incomplete</option>
+            </select>
+        </div>
     </form>
     <div class="todo-container">
         <ul class="todo-list">
